// T044 Temporal Workflows gRPC Server Implementation
// This file implements the gRPC server for temporal workflow operations

package grpc

import (
	"context"
	"time"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// Request/Response types for Temporal Workflow operations
// These are placeholder types until we generate from protobuf

type StartWorkflowRequest struct {
	WorkflowType string                 `json:"workflow_type"`
	WorkflowID   string                 `json:"workflow_id,omitempty"`
	TaskQueue    string                 `json:"task_queue"`
	Input        map[string]interface{} `json:"input,omitempty"`
	Options      *WorkflowOptions       `json:"options,omitempty"`
}

type StartWorkflowResponse struct {
	Success     bool   `json:"success"`
	Message     string `json:"message"`
	WorkflowID  string `json:"workflow_id"`
	RunID       string `json:"run_id"`
	WorkflowURL string `json:"workflow_url,omitempty"`
}

type GetWorkflowStatusRequest struct {
	WorkflowID string `json:"workflow_id"`
	RunID      string `json:"run_id,omitempty"`
}

type GetWorkflowStatusResponse struct {
	Success    bool                   `json:"success"`
	Message    string                 `json:"message"`
	WorkflowID string                 `json:"workflow_id"`
	RunID      string                 `json:"run_id"`
	Status     string                 `json:"status"`
	StartTime  string                 `json:"start_time"`
	EndTime    string                 `json:"end_time,omitempty"`
	Result     map[string]interface{} `json:"result,omitempty"`
	Error      string                 `json:"error,omitempty"`
}

type ListWorkflowsRequest struct {
	WorkspaceID  string            `json:"workspace_id,omitempty"`
	WorkflowType string            `json:"workflow_type,omitempty"`
	Status       string            `json:"status,omitempty"`
	StartTime    string            `json:"start_time,omitempty"`
	EndTime      string            `json:"end_time,omitempty"`
	Limit        int32             `json:"limit,omitempty"`
	Offset       int32             `json:"offset,omitempty"`
	Filters      map[string]string `json:"filters,omitempty"`
}

type ListWorkflowsResponse struct {
	Success    bool                     `json:"success"`
	Message    string                   `json:"message"`
	Workflows  []*WorkflowExecutionInfo `json:"workflows"`
	TotalCount int64                    `json:"total_count"`
	Page       int32                    `json:"page"`
	PageSize   int32                    `json:"page_size"`
}

type CancelWorkflowRequest struct {
	WorkflowID string `json:"workflow_id"`
	RunID      string `json:"run_id,omitempty"`
	Reason     string `json:"reason,omitempty"`
}

type CancelWorkflowResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type TerminateWorkflowRequest struct {
	WorkflowID string `json:"workflow_id"`
	RunID      string `json:"run_id,omitempty"`
	Reason     string `json:"reason,omitempty"`
}

type TerminateWorkflowResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type SignalWorkflowRequest struct {
	WorkflowID string                 `json:"workflow_id"`
	RunID      string                 `json:"run_id,omitempty"`
	SignalName string                 `json:"signal_name"`
	Input      map[string]interface{} `json:"input,omitempty"`
}

type SignalWorkflowResponse struct {
	Success bool   `json:"success"`
	Message string `json:"message"`
}

type QueryWorkflowRequest struct {
	WorkflowID string                 `json:"workflow_id"`
	RunID      string                 `json:"run_id,omitempty"`
	QueryType  string                 `json:"query_type"`
	Args       map[string]interface{} `json:"args,omitempty"`
}

type QueryWorkflowResponse struct {
	Success bool                   `json:"success"`
	Message string                 `json:"message"`
	Result  map[string]interface{} `json:"result,omitempty"`
}

// Supporting types
type WorkflowOptions struct {
	WorkflowExecutionTimeout string            `json:"workflow_execution_timeout,omitempty"`
	WorkflowRunTimeout       string            `json:"workflow_run_timeout,omitempty"`
	WorkflowTaskTimeout      string            `json:"workflow_task_timeout,omitempty"`
	RetryPolicy              *RetryPolicy      `json:"retry_policy,omitempty"`
	CronSchedule             string            `json:"cron_schedule,omitempty"`
	Memo                     map[string]string `json:"memo,omitempty"`
	SearchAttributes         map[string]string `json:"search_attributes,omitempty"`
}

type RetryPolicy struct {
	InitialInterval        string   `json:"initial_interval,omitempty"`
	BackoffCoefficient     float64  `json:"backoff_coefficient,omitempty"`
	MaximumInterval        string   `json:"maximum_interval,omitempty"`
	MaximumAttempts        int32    `json:"maximum_attempts,omitempty"`
	NonRetriableErrorTypes []string `json:"non_retriable_error_types,omitempty"`
}

type WorkflowExecutionInfo struct {
	WorkflowID    string                 `json:"workflow_id"`
	RunID         string                 `json:"run_id"`
	WorkflowType  string                 `json:"workflow_type"`
	TaskQueue     string                 `json:"task_queue"`
	Status        string                 `json:"status"`
	StartTime     string                 `json:"start_time"`
	EndTime       string                 `json:"end_time,omitempty"`
	ExecutionTime string                 `json:"execution_time"`
	Memo          map[string]string      `json:"memo,omitempty"`
	Result        map[string]interface{} `json:"result,omitempty"`
	Error         string                 `json:"error,omitempty"`
}

// TemporalServer handles temporal workflow gRPC operations
type TemporalServer struct {
	logger *Logger // Using custom Logger type for now
}

// NewTemporalServer creates a new temporal workflows gRPC server
func NewTemporalServer(logger *Logger) *TemporalServer {
	return &TemporalServer{
		logger: logger,
	}
}

// StartWorkflow starts a new temporal workflow
func (s *TemporalServer) StartWorkflow(ctx context.Context, req *StartWorkflowRequest) (*StartWorkflowResponse, error) {
	s.logger.Info("Starting workflow", "type", req.WorkflowType, "task_queue", req.TaskQueue)

	// Validate request
	if req.WorkflowType == "" || req.TaskQueue == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow type and task queue are required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Parse workspace ID from context
	workspaceID, err := s.extractWorkspaceID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract workspace ID", "error", err)
		return nil, status.Errorf(codes.InvalidArgument, "workspace ID required: %v", err)
	}

	// Check permissions
	if !s.canStartWorkflow(ctx, userID, workspaceID) {
		s.logger.Warn("Insufficient permissions to start workflow",
			"user_id", userID, "workspace_id", workspaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to start workflow")
	}

	// Generate workflow ID if not provided
	workflowID := req.WorkflowID
	if workflowID == "" {
		workflowID = uuid.New().String()
	}

	// TODO: Implement actual Temporal workflow start
	s.logger.Info("Workflow start requested",
		"workflow_id", workflowID, "type", req.WorkflowType, "user_id", userID)

	return &StartWorkflowResponse{
		Success:     true,
		Message:     "Workflow start placeholder - implementation pending",
		WorkflowID:  workflowID,
		RunID:       uuid.New().String(), // Placeholder
		WorkflowURL: "",                  // Placeholder
	}, nil
}

// GetWorkflowStatus retrieves the status of a workflow
func (s *TemporalServer) GetWorkflowStatus(ctx context.Context, req *GetWorkflowStatusRequest) (*GetWorkflowStatusResponse, error) {
	s.logger.Info("Getting workflow status", "workflow_id", req.WorkflowID)

	// Validate request
	if req.WorkflowID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow ID is required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canViewWorkflow(ctx, userID, req.WorkflowID) {
		s.logger.Warn("Insufficient permissions to view workflow",
			"user_id", userID, "workflow_id", req.WorkflowID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to view workflow")
	}

	// TODO: Implement actual Temporal workflow status retrieval
	s.logger.Info("Workflow status retrieval requested",
		"workflow_id", req.WorkflowID, "user_id", userID)

	return &GetWorkflowStatusResponse{
		Success:    true,
		Message:    "Workflow status retrieval placeholder - implementation pending",
		WorkflowID: req.WorkflowID,
		RunID:      req.RunID,
		Status:     "RUNNING", // Placeholder
		StartTime:  time.Now().Format(time.RFC3339),
		EndTime:    "", // Placeholder
		Result:     make(map[string]interface{}),
		Error:      "",
	}, nil
}

// ListWorkflows lists workflows with filtering
func (s *TemporalServer) ListWorkflows(ctx context.Context, req *ListWorkflowsRequest) (*ListWorkflowsResponse, error) {
	s.logger.Info("Listing workflows")

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Parse workspace ID
	var workspaceID uuid.UUID
	if req.WorkspaceID != "" {
		workspaceID, err = uuid.Parse(req.WorkspaceID)
		if err != nil {
			s.logger.Error("Invalid workspace ID", "workspace_id", req.WorkspaceID, "error", err)
			return nil, status.Errorf(codes.InvalidArgument, "invalid workspace ID: %v", err)
		}
	} else {
		// Extract from context
		workspaceID, err = s.extractWorkspaceID(ctx)
		if err != nil {
			s.logger.Error("Failed to extract workspace ID", "error", err)
			return nil, status.Errorf(codes.InvalidArgument, "workspace ID required: %v", err)
		}
	}

	// Check permissions
	if !s.canListWorkflows(ctx, userID, workspaceID) {
		s.logger.Warn("Insufficient permissions to list workflows",
			"user_id", userID, "workspace_id", workspaceID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to list workflows")
	}

	// TODO: Implement actual Temporal workflow listing
	s.logger.Info("Workflow listing requested",
		"workspace_id", workspaceID, "user_id", userID)

	return &ListWorkflowsResponse{
		Success:    true,
		Message:    "Workflow listing placeholder - implementation pending",
		Workflows:  []*WorkflowExecutionInfo{},
		TotalCount: 0, // Placeholder
		Page:       1,
		PageSize:   req.Limit,
	}, nil
}

// CancelWorkflow cancels a running workflow
func (s *TemporalServer) CancelWorkflow(ctx context.Context, req *CancelWorkflowRequest) (*CancelWorkflowResponse, error) {
	s.logger.Info("Cancelling workflow", "workflow_id", req.WorkflowID)

	// Validate request
	if req.WorkflowID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow ID is required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canCancelWorkflow(ctx, userID, req.WorkflowID) {
		s.logger.Warn("Insufficient permissions to cancel workflow",
			"user_id", userID, "workflow_id", req.WorkflowID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to cancel workflow")
	}

	// TODO: Implement actual Temporal workflow cancellation
	s.logger.Info("Workflow cancellation requested",
		"workflow_id", req.WorkflowID, "reason", req.Reason, "user_id", userID)

	return &CancelWorkflowResponse{
		Success: true,
		Message: "Workflow cancellation placeholder - implementation pending",
	}, nil
}

// TerminateWorkflow terminates a workflow
func (s *TemporalServer) TerminateWorkflow(ctx context.Context, req *TerminateWorkflowRequest) (*TerminateWorkflowResponse, error) {
	s.logger.Info("Terminating workflow", "workflow_id", req.WorkflowID)

	// Validate request
	if req.WorkflowID == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow ID is required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canTerminateWorkflow(ctx, userID, req.WorkflowID) {
		s.logger.Warn("Insufficient permissions to terminate workflow",
			"user_id", userID, "workflow_id", req.WorkflowID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to terminate workflow")
	}

	// TODO: Implement actual Temporal workflow termination
	s.logger.Info("Workflow termination requested",
		"workflow_id", req.WorkflowID, "reason", req.Reason, "user_id", userID)

	return &TerminateWorkflowResponse{
		Success: true,
		Message: "Workflow termination placeholder - implementation pending",
	}, nil
}

// SignalWorkflow sends a signal to a workflow
func (s *TemporalServer) SignalWorkflow(ctx context.Context, req *SignalWorkflowRequest) (*SignalWorkflowResponse, error) {
	s.logger.Info("Signaling workflow", "workflow_id", req.WorkflowID, "signal", req.SignalName)

	// Validate request
	if req.WorkflowID == "" || req.SignalName == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow ID and signal name are required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canSignalWorkflow(ctx, userID, req.WorkflowID) {
		s.logger.Warn("Insufficient permissions to signal workflow",
			"user_id", userID, "workflow_id", req.WorkflowID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to signal workflow")
	}

	// TODO: Implement actual Temporal workflow signaling
	s.logger.Info("Workflow signal requested",
		"workflow_id", req.WorkflowID, "signal", req.SignalName, "user_id", userID)

	return &SignalWorkflowResponse{
		Success: true,
		Message: "Workflow signaling placeholder - implementation pending",
	}, nil
}

// QueryWorkflow queries a workflow
func (s *TemporalServer) QueryWorkflow(ctx context.Context, req *QueryWorkflowRequest) (*QueryWorkflowResponse, error) {
	s.logger.Info("Querying workflow", "workflow_id", req.WorkflowID, "query_type", req.QueryType)

	// Validate request
	if req.WorkflowID == "" || req.QueryType == "" {
		return nil, status.Errorf(codes.InvalidArgument, "workflow ID and query type are required")
	}

	// Parse user ID from context
	userID, err := s.extractUserID(ctx)
	if err != nil {
		s.logger.Error("Failed to extract user ID", "error", err)
		return nil, status.Errorf(codes.Unauthenticated, "authentication required: %v", err)
	}

	// Check permissions
	if !s.canQueryWorkflow(ctx, userID, req.WorkflowID) {
		s.logger.Warn("Insufficient permissions to query workflow",
			"user_id", userID, "workflow_id", req.WorkflowID)
		return nil, status.Errorf(codes.PermissionDenied, "insufficient permissions to query workflow")
	}

	// TODO: Implement actual Temporal workflow querying
	s.logger.Info("Workflow query requested",
		"workflow_id", req.WorkflowID, "query_type", req.QueryType, "user_id", userID)

	return &QueryWorkflowResponse{
		Success: true,
		Message: "Workflow querying placeholder - implementation pending",
		Result:  make(map[string]interface{}),
	}, nil
}

// Helper methods

// extractUserID extracts user ID from gRPC context
func (s *TemporalServer) extractUserID(ctx context.Context) (uuid.UUID, error) {
	// TODO: Extract from actual gRPC metadata/JWT token
	// This is a placeholder implementation
	return uuid.New(), nil
}

// extractWorkspaceID extracts workspace ID from gRPC context
func (s *TemporalServer) extractWorkspaceID(ctx context.Context) (uuid.UUID, error) {
	// TODO: Extract from actual gRPC metadata/headers
	// This is a placeholder implementation
	return uuid.New(), nil
}

// Permission check methods - placeholders
func (s *TemporalServer) canStartWorkflow(ctx context.Context, userID, workspaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canViewWorkflow(ctx context.Context, userID uuid.UUID, workflowID string) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canListWorkflows(ctx context.Context, userID, workspaceID uuid.UUID) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canCancelWorkflow(ctx context.Context, userID uuid.UUID, workflowID string) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canTerminateWorkflow(ctx context.Context, userID uuid.UUID, workflowID string) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canSignalWorkflow(ctx context.Context, userID uuid.UUID, workflowID string) bool {
	// TODO: Implement actual permission checking
	return true
}

func (s *TemporalServer) canQueryWorkflow(ctx context.Context, userID uuid.UUID, workflowID string) bool {
	// TODO: Implement actual permission checking
	return true
}

// RegisterServer registers the temporal server with a gRPC server
func (s *TemporalServer) RegisterServer(grpcServer *grpc.Server) {
	// TODO: Register with actual generated protobuf service
	// For now, this is a placeholder
	s.logger.Info("Temporal gRPC server registered")
}
